RESOLVED FIXED224916
[iOS] Web processes recreated after crashing are not created with the right contentSizeCategory
https://bugs.webkit.org/show_bug.cgi?id=224916
Summary [iOS] Web processes recreated after crashing are not created with the right c...
Myles C. Maxfield
Reported 2021-04-21 21:59:03 PDT
[iOS] Web processes recreated after crashing are not created with the right contentSizeCategory
Attachments
Patch (14.81 KB, patch)
2021-04-21 22:03 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2021-04-21 22:03:40 PDT
EWS
Comment 2 2021-04-22 01:29:10 PDT
Committed r276428 (236891@main): <https://commits.webkit.org/236891@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426774 [details].
Ling Ho
Comment 3 2021-04-22 16:23:23 PDT
Note You need to log in before you can comment on or make changes to this bug.