[iOS] Web processes recreated after crashing are not created with the right contentSizeCategory https://bugs.webkit.org/show_bug.cgi?id=224916

Reviewed by Tim Horton.

Source/WebCore:

The constructor of WKWebView sets the contentSizeCategory for the first page.
But if the web process crashes, the new one won't have it set.

This patch simply adds the contentSizeCategory to the WebProcessCreationParameters.

Tests: TextStyleFontSize.Startup
       TextStyleFontSize.AfterCrash

* rendering/RenderThemeCocoa.h:

Source/WebKit:

* Shared/WebProcessCreationParameters.cpp:
(WebKit::WebProcessCreationParameters::encode const):
(WebKit::WebProcessCreationParameters::decode):
* Shared/WebProcessCreationParameters.h:
* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/ios/TextStyleFontSize.mm: Added.
(-[TextStyleFontSizeWebView _contentSizeCategory]):
(TEST):


Canonical link: https://commits.webkit.org/236891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276428 268f45cc-cd09-0410-ab3c-d52691b4dbfc